Fixed visible title when scroll-reveal is enabled

--- a/view/frontend/web/css/source/layout/_expanded-with-toolbar.less
+++ b/view/frontend/web/css/source/layout/_expanded-with-toolbar.less
@@ -51,6 +51,7 @@
                     width: 100%;
                     border: 0;
                     padding: 0;
+                    overflow: hidden;
                 }
 
                 > .item.content {
